Update Python PreCreatedTool .ipynb

--- a/Python PreCreatedTool .ipynb
+++ b/Python PreCreatedTool .ipynb
@@ -51,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "myOpenAPiKey=\"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\""
+    "myOpenAPiKey=\"<your-openai-apiKey>\""
    ]
   },
   {
